Refactor: test methods now using global Shoe classes