@@ -12,6 +12,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Sort;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -27,33 +28,36 @@ public class ShoeServiceTest {
     @InjectMocks
     private ShoeService shoeService;
 
-    // datas for testing
-    private final SizeAndQuantity sizeAndQuantityFor41 = new SizeAndQuantity(41, 1);
+    // data for testing
+    private final SizeAndQuantity sizeAndQuantityFor41 = new SizeAndQuantity(41, 2);
     private final SizeAndQuantity sizeAndQuantityFor42 = new SizeAndQuantity(42, 3);
     private final SizeAndQuantity sizeAndQuantityFor43 = new SizeAndQuantity(43, 4);
     private final SizeAndQuantity sizeAndQuantityFor44 = new SizeAndQuantity(44, 5);
 
+    private final Shoe testShoe1 = new Shoe("Test Shoe 1", "nike", 90.0, "img_url",
+            "detailed info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42));
+    private final Shoe testShoe2 = new Shoe("Test Shoe 2", "nike", 100.0, "img_url",
+            "detailed info", List.of(sizeAndQuantityFor41));
+
+    private final Shoe testShoe3 = new Shoe("Test Shoe 3", "adidas", 110.0, "img_url",
+            "detailed info", List.of(sizeAndQuantityFor44));
+
+
+    private final Shoe testShoe4 = new Shoe("Test Shoe 4", "adidas", 120.0, "img_url",
+            "detailed info", List.of(sizeAndQuantityFor43, sizeAndQuantityFor44));
 
     // Test for getAll
     @Test
     public void testGetAll() {
 
-        List<Shoe> shoes = Arrays.asList(
-                new Shoe("Test Shoe 1", "nike", 90.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)),
-
-                new Shoe("Test Shoe 2", "adidas", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor43)),
-
-                new Shoe("Test Shoe 3", "adidas", 110.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor44)));
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe1, testShoe2, testShoe3, testShoe4));
 
         when(shoeRepo.findAllByPriceIsBetween(50.0, 120.0)).thenReturn(shoes);
 
         List<BasicShoeInfoDTO> basicShoeInfoDTOs = shoeService.getAll(50.0, 120.0);
 
         assertFalse(basicShoeInfoDTOs.isEmpty());
-        assertEquals(3, basicShoeInfoDTOs.size());
+        assertEquals(4, basicShoeInfoDTOs.size());
         assertEquals("Test Shoe 2", basicShoeInfoDTOs.get(1).name());
     }
 
@@ -61,9 +65,7 @@ public class ShoeServiceTest {
     @Test
     public void testGetAllShoesByBrand() {
 
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 90.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)));
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe1, testShoe2));
 
         when(shoeRepo.findAllByBrandAndPriceIsBetween("nike", 50.0, 120.0)).thenReturn(shoes);
 
@@ -71,7 +73,7 @@ public class ShoeServiceTest {
                 50.0, 120.0);
 
         assertFalse(basicShoeInfoDTOs.isEmpty());
-        assertEquals(1, basicShoeInfoDTOs.size());
+        assertEquals(2, basicShoeInfoDTOs.size());
         assertEquals("Test Shoe 1", basicShoeInfoDTOs.get(0).name());
     }
 
@@ -79,11 +81,7 @@ public class ShoeServiceTest {
     @Test
     public void testGetShoesByPriceOrder() {
 
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 90.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)),
-                new Shoe("Test Shoe 2", "adidas", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor43)));
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe1, testShoe2));
 
         when(shoeRepo.findAllWithinPriceRange(50.0, 105.0, Sort.by("price").ascending()))
                 .thenReturn(shoes);
@@ -100,11 +98,8 @@ public class ShoeServiceTest {
     // Test for getShoesByBrandAndPriceOrder
     @Test
     public void testGetShoesByBrandAndPriceOrder() {
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)),
-                new Shoe("Test Shoe 2", "nike", 95.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor43)));
+
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe2, testShoe1));
 
         when(shoeRepo.findAllByBrandAndPriceIsBetween("nike", 50.0, 105.0,
                 Sort.by("price").descending()))
@@ -116,17 +111,14 @@ public class ShoeServiceTest {
         assertFalse(basicShoeInfoDTOs.isEmpty());
         assertEquals(2, basicShoeInfoDTOs.size());
         assertTrue(basicShoeInfoDTOs.get(1).price() < basicShoeInfoDTOs.get(0).price());
-        assertEquals("Test Shoe 2", basicShoeInfoDTOs.get(1).name());
+        assertEquals("Test Shoe 1", basicShoeInfoDTOs.get(1).name());
     }
 
     // Test for getShoesBySize
     @Test
     public void testGetShoesBySize() {
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)),
-                new Shoe("Test Shoe 2", "adidas", 80.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41)));
+
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe1, testShoe2));
 
         when(shoeRepo.findAllBySize(0.0, 200.0, 41))
                 .thenReturn(shoes);
@@ -141,11 +133,8 @@ public class ShoeServiceTest {
     // Test for getShoesBySizeAndPriceOrder
     @Test
     public void testGetShoesBySizeAndPriceOrder() {
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)),
-                new Shoe("Test Shoe 2", "adidas", 80.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41)));
+
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe2, testShoe1));
 
         when(shoeRepo.findAllBySizeInPriceOrder(0.0, 120.0, 41,
                 Sort.by("price").descending()))
@@ -158,16 +147,15 @@ public class ShoeServiceTest {
         assertFalse(basicShoeInfoDTOs.isEmpty());
         assertEquals(2, basicShoeInfoDTOs.size());
         assertTrue(basicShoeInfoDTOs.get(0).price() > basicShoeInfoDTOs.get(1).price());
-        assertEquals("Test Shoe 2", basicShoeInfoDTOs.get(1).name());
+        assertEquals("Test Shoe 2", basicShoeInfoDTOs.get(0).name());
     }
 
 
     // Test for getShoesBySizeAndBrand
     @Test
     public void testGetShoesBySizeAndBrand() {
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)));
+
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe1));
 
         when(shoeRepo.findAllBySizeAndBrand(0.0, 200.0, 42, "nike"))
                 .thenReturn(shoes);
@@ -184,22 +172,19 @@ public class ShoeServiceTest {
     // Test for getShoesBySizeAndBrandAndPriceOrder
     @Test
     public void testGetShoesBySizeAndBrandAndPriceOrder() {
-        List<Shoe> shoes = List.of(
-                new Shoe("Test Shoe 1", "nike", 100.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41)),
-                new Shoe("Test Shoe 2", "nike", 102.0, "img_url",
-                        "detailed_info", List.of(sizeAndQuantityFor41, sizeAndQuantityFor42)));
 
-        when(shoeRepo.findAllBySizeAndBrandInPriceOrder(0.0, 110.0, 41, "nike",
+        List<Shoe> shoes = new ArrayList<>(Arrays.asList(testShoe3, testShoe4));
+
+        when(shoeRepo.findAllBySizeAndBrandInPriceOrder(0.0, 110.0, 44, "adidas",
                 Sort.by("price").ascending()))
                 .thenReturn(shoes);
 
         List<BasicShoeInfoDTO> basicShoeInfoDTOs = shoeService.getShoesBySizeAndBrandAndPriceOrder(
-                0.0, 110.0, 41, "nike", "asc");
+                0.0, 110.0, 44, "adidas", "asc");
 
         assertFalse(basicShoeInfoDTOs.isEmpty());
         assertEquals(2, basicShoeInfoDTOs.size());
-        assertEquals("nike", basicShoeInfoDTOs.get(0).brand());
+        assertEquals("adidas", basicShoeInfoDTOs.get(0).brand());
         assertTrue(basicShoeInfoDTOs.get(0).price() < basicShoeInfoDTOs.get(1).price());
     }
 
@@ -207,19 +192,16 @@ public class ShoeServiceTest {
     @Test
     public void testGetDetailedShoeInfoById() {
 
-        Shoe shoe = new Shoe("Test Shoe 1", "nike", 120.0, "img_url", "detailed info",
-                List.of(sizeAndQuantityFor42, sizeAndQuantityFor43, sizeAndQuantityFor44));
-
-        when(shoeRepo.findById(1)).thenReturn(shoe);
+        when(shoeRepo.findById(1)).thenReturn(testShoe1);
 
         DetailedShoeInfoDTO detailedShoeInfoDTO = shoeService.getDetailedShoeInfoById(1);
 
         assertNotNull(detailedShoeInfoDTO);
         assertEquals("Test Shoe 1", detailedShoeInfoDTO.name());
         assertEquals("nike", detailedShoeInfoDTO.brand());
-        assertEquals(120.0, detailedShoeInfoDTO.price());
+        assertEquals(90.0, detailedShoeInfoDTO.price());
         assertEquals("detailed info", detailedShoeInfoDTO.detailedInfo());
-        assertEquals(3, detailedShoeInfoDTO.sizeAndQuantityList().size());
-        assertEquals(3, (detailedShoeInfoDTO.sizeAndQuantityList().get(0).getQuantity()));
+        assertEquals(2, detailedShoeInfoDTO.sizeAndQuantityList().size());
+        assertEquals(2, detailedShoeInfoDTO.sizeAndQuantityList().get(0).getQuantity());
     }
 }
